message example_test
{
    int32 int_val = 1;
    string string_val = 2;
    bool bool_val = 3;
    double double_val = 4;
    [int32] int_vals = 5;
    <string,int32> map_val = 6;
    [box] nesteds = 7;
}

message box
{
    int32 test = 1;
}

/*
this
is
a
block 
comment
*/
service example
{
    rpc test () return (bool){}
    rpc echo(<string,int32> two) return(<string,string>){}
}
service chat
{
    rpc speak(string one) return(bool){}
}